--- a/templates/base.html
+++ b/templates/base.html
@@ -36,5 +36,14 @@
         
         {% block content %}{% endblock %}
     </div>
+
+    <script>
+        const hamburger = document.querySelector('.hamburger');
+        const navLinks = document.querySelector('.nav-links');
+
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
