--- a/static/style.css
+++ b/static/style.css
@@ -178,12 +178,12 @@ hr { border: none; border-top: 1px solid var(--color-borde-suave); margin: 25px 
 
 /* --- CÓDIGO RESPONSIVO (INCLUYENDO NAVBAR) --- */
 @media (max-width: 900px) {
-.navbar {
-flex-wrap: wrap;
-justify-content: space-between; /* Logo a la izquierda, hamburguesa a la derecha */
-align-items: center;
-padding: 10px 20px;
-}
+    .navbar {
+        flex-wrap: wrap;
+        /* Esta línea es la que empuja los elementos a los costados */
+        justify-content: space-between; 
+        align-items: center;
+    }
 .hamburger {
 display: block;
 color: var(--color-blanco);
